- Refactored the model again ...

--- a/core/src/main/flex/DukeConContext.mxml
+++ b/core/src/main/flex/DukeConContext.mxml
@@ -8,6 +8,7 @@
 
     <fx:Declarations>
         <controller:ConferenceController baseUrl="{baseUrl}"/>
+        <controller:LanguageController/>
         <controller:LocationController/>
         <controller:SpeakerController/>
         <controller:TrackController/>
