--- a/core/src/main/flex/org/dukecon/itemrenderer/header/LocationItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/header/LocationItemRenderer.mxml
@@ -6,10 +6,10 @@
 
     <fx:Script>
     <![CDATA[
-        import org.dukecon.model.Room;
+        import org.dukecon.model.Location;
 
         [Bindable]
-        protected var roomName:String;
+        protected var locationName:String;
 
         [Bindable("dataChange")]
         override public function get data():Object {
@@ -18,7 +18,7 @@
 
         override public function set data(value:Object):void {
             super.data = value;
-            roomName = Room(value.room).name;
+            locationName = Location(value.location).names[resourceManager.localeChain[0]];
         }
         ]]>
   </fx:Script>
@@ -30,7 +30,7 @@
     </s:Rect>
 
     <s:VGroup width="100%" height="320" verticalAlign="middle" horizontalAlign="center">
-        <s:Label text="{roomName}" rotationZ="-90" styleName="title"/>
+        <s:Label text="{locationName}" rotationZ="-90" styleName="title"/>
     </s:VGroup>
 
 </s:GridItemRenderer>
