--- a/core/src/main/flex/org/dukecon/views/EventView.mxml
+++ b/core/src/main/flex/org/dukecon/views/EventView.mxml
@@ -23,11 +23,13 @@
     <fx:Script>
         <![CDATA[
         import mx.core.UIComponent;
+        import mx.events.ItemClickEvent;
 
         import org.dukecon.controller.ConferenceController;
+        import org.dukecon.controller.LanguageController;
         import org.dukecon.controller.TrackController;
         import org.dukecon.controller.UserPreferenceController;
-        import org.dukecon.model.Talk;
+        import org.dukecon.model.Event;
 
         [Embed(source="/star-unselected.png")]
         [Bindable]
@@ -38,10 +40,7 @@
         public var starSelected:Class;
 
         [Bindable]
-        protected var talk:Talk;
-
-        [Bindable]
-        protected var language:String;
+        protected var event:org.dukecon.model.Event;
 
         [Bindable]
         protected var selectedIcon:Class;
@@ -53,7 +52,7 @@
         protected var speakers:String;
 
         [Bindable]
-        protected var roomName:String;
+        protected var locationName:String;
 
         [Bindable]
         protected var trackName:String;
@@ -65,23 +64,41 @@
         public var trackController:TrackController;
 
         [Inject]
+        public var languageController:LanguageController;
+
+        [Inject]
         public var userPreferenceController:UserPreferenceController;
+
+        [Bindable("dataChange")]
+        override public function get data():Object {
+            return super.data;
+        }
+
+        override public function set data(value:Object):void {
+            super.data = value;
+            event = org.dukecon.model.Event(data);
+            update();
+        }
+
 
         override protected function commitProperties():void {
             super.commitProperties();
-            if (data) {
-                talk = Talk(data);
+            update();
+        }
+
+        protected function update():void {
+            if (event && conferenceController && trackController && languageController) {
                 updateSelectionIcon();
-                if (talk) {
-                    language = talk.languageId;
-                    trackIcon = trackController.getIconForTrack(talk.trackId);
+                if (event) {
+                    trackIcon = trackController.getIconForTrack(event.trackId);
+                    languageIcon.source = languageController.getIconForLanguage(event.languageId);
                 } else {
-                    language = null;
                     trackIcon = null;
+                    languageIcon.source = null;
                 }
                 speakers = "";
-                if (talk.speakerIds) {
-                    for each(var speaker:Object in talk.speakerIds) {
+                if (event.speakerIds) {
+                    for each(var speaker:Object in event.speakerIds) {
                         if (speaker) {
                             if (speakers.length > 0) {
                                 speakers += " | ";
@@ -90,32 +107,32 @@
                         }
                     }
                 }
-                title = startTimeFormatter.format(talk.start) + " - " + endTimeFormatter.format(talk.end);
-                ratingGroup.selectedValue = conferenceController.getRating(talk);
-                roomName = conferenceController.getRoom(talk.roomId).name;
-                trackName = conferenceController.getTrack(talk.trackId).names[resourceManager.localeChain[0]];
+                title = startTimeFormatter.format(event.start) + " - " + endTimeFormatter.format(event.end);
+                ratingGroup.selectedValue = conferenceController.getRating(event);
+                locationName = conferenceController.getLocation(event.locationId).names[resourceManager.localeChain[0]];
+                trackName = conferenceController.getTrack(event.trackId).names[resourceManager.localeChain[0]];
             }
         }
 
         protected function updateSelectionIcon():void {
-            if (talk) {
-                selectedIcon = userPreferenceController.isTalkSelected(talk) ? starSelected : starUnselected;
+            if (event) {
+                selectedIcon = userPreferenceController.isEventSelected(event) ? starSelected : starUnselected;
             } else {
                 selectedIcon = null;
             }
         }
 
-        protected function toggleSelection(event:MouseEvent):void {
-            if (userPreferenceController.isTalkSelected(talk)) {
-                userPreferenceController.unselectTalk(talk);
+        protected function toggleSelection(evnt:MouseEvent):void {
+            if (userPreferenceController.isEventSelected(event)) {
+                userPreferenceController.unselectEvent(event);
             } else {
-                userPreferenceController.selectTalk(talk);
+                userPreferenceController.selectEvent(event);
             }
             updateSelectionIcon();
         }
 
-        protected function onRatingChanged(event:Event):void {
-            conferenceController.setRating(talk, Number(ratingGroup.selectedValue))
+        protected function onRatingChanged(evnt:ItemClickEvent):void {
+            conferenceController.setRating(event, Number(ratingGroup.selectedValue))
         }
         ]]>
     </fx:Script>
@@ -127,15 +144,15 @@
     <s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
         <s:VGroup width="100%" padding="10" gap="30">
             <s:Group width="100%">
-                <s:Rect top="4" left="4" right="4" height="150" radiusX="10" radiusY="10" visible="{talk != null}">
+                <s:Rect top="4" left="4" right="4" height="150" radiusX="10" radiusY="10" visible="{event != null}">
                     <s:fill>
                         <s:SolidColor color="0x1AA3B1"/>
                     </s:fill>
                 </s:Rect>
 
-                <s:Label id="titleLabel" text="{talk.title}" top="20" left="20" width="440" styleName="title"/>
+                <s:Label id="titleLabel" text="{event.title}" top="20" left="20" width="440" styleName="title"/>
 
-                <s:Rect top="20" right="100" width="64" height="64" visible="{talk != null}">
+                <s:Rect top="20" right="100" width="64" height="64" visible="{event != null}">
                     <s:fill>
                         <s:SolidColor color="0xffffff"/>
                     </s:fill>
@@ -148,19 +165,18 @@
 
                 <s:Image source="{selectedIcon}" top="20" right="20" click="toggleSelection(event)"/>
 
-                <s:Image top="100" right="28" width="48" height="36" source="@Embed('/english-small.png')"
-                         visible="{language == 'english'}"/>
+                <s:Image id="languageIcon" top="100" right="28" width="48" height="36"/>
             </s:Group>
-            <s:Label text="{talk.abstractText}" styleName="content" width="{UIComponent(parent).width - 20}"/>
+            <s:Label text="{event.abstractText}" styleName="content" width="{UIComponent(parent).width - 20}"/>
             <s:Label text="{speakers}" width="{UIComponent(parent).width - 20}" fontWeight="bold"/>
             <s:HGroup>
                 <s:Label text="{resourceManager.getString('dukecon', 'talks.time')}:" fontWeight="bold"/>
-                <s:Label text="{startTimeFormatter.format(talk.start)} - {endTimeFormatter.format(talk.end)}"
+                <s:Label text="{startTimeFormatter.format(event.start)} - {endTimeFormatter.format(event.end)}"
                          styleName="content"/>
             </s:HGroup>
             <s:HGroup>
                 <s:Label text="{resourceManager.getString('dukecon', 'talks.room')}:" fontWeight="bold"/>
-                <s:Label text="{roomName}" styleName="content"/>
+                <s:Label text="{locationName}" styleName="content"/>
             </s:HGroup>
             <s:HGroup>
                 <s:Label text="{resourceManager.getString('dukecon', 'talks.track')}:" fontWeight="bold"/>
