--- a/core/src/main/flex/org/dukecon/views/LocationView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationView.mxml
@@ -25,13 +25,14 @@
         import org.dukecon.controller.ConferenceController;
         import org.dukecon.controller.LocationController;
         import org.dukecon.events.ListEvent;
-        import org.dukecon.model.Room;
+        import org.dukecon.model.Location;
 
         [Bindable]
-        protected var location:Room;
+        protected var location:Location;
 
         [Bindable]
         protected var locationIcon:Class;
+        protected var locationName:String;
 
         [Bindable]
         protected var talks:ArrayCollection;
@@ -53,17 +54,18 @@
 
         override public function set data(value:Object):void {
             super.data = value;
-            location = Room(value);
+            location = Location(value);
+            locationName = location.names[resourceManager.localeChain[0]];
         }
 
         override protected function commitProperties():void {
             super.commitProperties();
             locationIcon = locationController.getIconForLocation(location.id);
-            talks = conferenceController.getTalksForRoom(location);
+            talks = conferenceController.getEventsForLocation(location);
         }
 
         protected function onTalkSelected(event:ListEvent):void {
-            navigator.pushView(TalkView, event.data);
+            navigator.pushView(EventView, event.data);
         }
         ]]>
     </fx:Script>
@@ -81,7 +83,7 @@
                     </s:fill>
                 </s:Rect>
 
-                <s:Label text="{location.name}" top="22" left="20" width="440" styleName="title"/>
+                <s:Label text="{locationName}" top="22" left="20" width="440" styleName="title"/>
 
                 <s:Rect top="20" right="20" width="120" height="120">
                     <s:fill>
@@ -95,7 +97,7 @@
                 <u:VectorImage source="{locationIcon}" top="22" right="22" width="116" height="116"/>
             </s:Group>
             <s:List id="talkList" width="100%" height="100%"
-                    itemRenderer="org.dukecon.itemrenderer.TalkItemRenderer"
+                    itemRenderer="org.dukecon.itemrenderer.EventItemRenderer"
                     dataProvider="{talks}"/>
         </s:VGroup>
     </s:Scroller>
