--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -40,7 +40,7 @@
         }
 
         protected function onRefreshClicked(event:MouseEvent):void {
-            conferenceController.updateTalks();
+            conferenceController.updateEvents();
 //            if (authController.loggedIn) {
             userPreferenceController.readUserPreferences(navigator);
 //            }
