- Refactored the model again ...

--- a/core/src/main/flex/org/dukecon/views/EventView.mxml
+++ b/core/src/main/flex/org/dukecon/views/EventView.mxml
@@ -110,7 +110,11 @@
                 title = startTimeFormatter.format(event.start) + " - " + endTimeFormatter.format(event.end);
                 ratingGroup.selectedValue = conferenceController.getRating(event);
                 locationName = conferenceController.getLocation(event.locationId).names[resourceManager.localeChain[0]];
-                trackName = conferenceController.getTrack(event.trackId).names[resourceManager.localeChain[0]];
+                if(event.trackId) {
+                    trackName = conferenceController.getTrack(event.trackId).names[resourceManager.localeChain[0]];
+                } else {
+                    trackName = null;
+                }
             }
         }
 
